--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -36,12 +36,13 @@
 }
 .humburger {
   display: none;
+  cursor: pointer;
 }
 .icon {
   font-size: 1.5rem;
 }
 
-@media screen and (max-width: 940px) {
+@media screen and (max-width: 600px) {
   .humburger {
     display: block;
   }
